--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,7 @@ a{
 
   font-size: 35px;
   text-align: center;
+  font-weight: bold;
   /* padding-top:20px;
   max-width: 700px; 
   margin: 0 auto !important; 
